--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,9 +11,16 @@
         <action
             android:id="@+id/action_postList_to_addPost"
             app:destination="@id/addPost" />
+        <action
+            android:id="@+id/action_postList_to_postFragment"
+            app:destination="@id/postFragment" />
     </fragment>
     <fragment
         android:id="@+id/addPost"
         android:name="com.example.medic.Presentation.View.AddPost"
         android:label="AddPost" />
+    <fragment
+        android:id="@+id/postFragment"
+        android:name="com.example.medic.Presentation.View.PostFragment"
+        android:label="PostFragment" />
 </navigation>
