--- a/app/src/main/res/layout/post_list_fragment.xml
+++ b/app/src/main/res/layout/post_list_fragment.xml
@@ -26,7 +26,7 @@
           android:layout_gravity="end"
           android:layout_marginEnd="16dp"
           android:layout_marginBottom="16dp"
-          android:backgroundTint="#8BFF4E"
+          android:backgroundTint="@color/black"
           android:backgroundTintMode="add"
           android:padding="10dp"
           android:src="@android:drawable/ic_input_add"
