--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,6 +14,9 @@
         <action
             android:id="@+id/action_postList_to_postFragment"
             app:destination="@id/postFragment" />
+        <action
+            android:id="@+id/action_postList_to_authFragment"
+            app:destination="@id/authFragment" />
     </fragment>
     <fragment
         android:id="@+id/addPost"
@@ -23,4 +26,8 @@
         android:id="@+id/postFragment"
         android:name="com.example.medic.Presentation.View.PostFragment"
         android:label="PostFragment" />
+    <fragment
+        android:id="@+id/authFragment"
+        android:name="com.example.medic.Presentation.View.AuthFragment"
+        android:label="AuthFragment" />
 </navigation>
